# necis-downloader

./: .env.example  .gitignore  01.Test_pipeline.ipynb  README.md  archive_necis.sh  discover_necis.py  download_continuous.py  download_events.py  fetch_responses.py  pyproject.toml  requirements_necis.txt  run_daily.sh
docs/: guide.md
necis/: __init__.py  browser.py  config.py  continuous.py  events.py  fetch_downloads.py  responses.py  utils.py
