[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "necis-downloader"
version = "0.1.0"
description = "Automated seismic waveform download from the KMA NECIS portal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.44",
    "pandas>=2.0",
    "obspy>=1.4",
    "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["necis*"]
